--- a/package.json
+++ b/package.json
@@ -38,10 +38,11 @@
     "ngx-image-cropper": "^4.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.17.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.2.9",
+    "@angular-devkit/build-angular": "^12.2.13",
     "@angular/cli": "^12.2.7",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
