--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "bootstrap": "^5.1.3",
         "firebase": "^8.7.1",
         "jquery": "^3.6.0",
+        "moment": "^2.29.1",
         "ng-zorro-antd": "^12.0.1",
         "ngx-image-cropper": "^4.0.1",
         "rxjs": "~6.6.0",
